# Scrapers_Enrique_

./: Makefile  README.md  pyproject.toml  requirements.txt
src/: driver.py  main.py  property.py
src/parsers/: main_page.py  properties.py
